force-app/main/default/objects/Case_Triage_Decision__c/Case_Triage_Decision__c.object-meta.xml
<CustomObject>
    <label>Case Triage Decision</label>
    <pluralLabel>Case Triage Decisions</pluralLabel>
    <nameField>
        <label>Decision Number</label>
        <type>AutoNumber</type>
        <displayFormat>CTD-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>