force-app/main/default/objects/Case_Triage_Decision__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Triage Decisions</relationshipLabel>
    <relationshipName>Triage_Decisions</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>