force-app/main/default/objects/Case_Triage_Decision__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Delivery</fullName><default>false</default></value>
            <value><fullName>Product Issue</fullName><default>false</default></value>
            <value><fullName>Payment</fullName><default>false</default></value>
            <value><fullName>Return</fullName><default>false</default></value>
            <value><fullName>Refund</fullName><default>false</default></value>
            <value><fullName>Cancellation</fullName><default>false</default></value>
            <value><fullName>General</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>