force-app/main/default/objects/Case_Triage_Decision__c/fields/Decision_Source__c.field-meta.xml
<CustomField>
    <fullName>Decision_Source__c</fullName>
    <label>Decision Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Rule Engine</fullName><default>false</default></value>
            <value><fullName>Manual Override</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>